finished home and team page

--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Elsa Gounot'
+  github_nickname: 'elsagt'
+- name: 'Marie-Lilas Onanga'
+  github_nickname: 'marielilaso'
